# finsight

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  inference.py  leaderboard.json  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  entrypoint.py  env.py  main.py  models.py  session_store.py
server/data/: __init__.py  fetcher.py
server/graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py
server/tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
tests/: test_graders.py
